# Nexus

./: .gitignore  README.md
Nexus/: CMakeLists.txt  Main.qml  Nexus.qml  main.cpp
Nexus/Modules/ProjectManager/: CMakeLists.txt  CommandList.qml  ProjectManager.qml  RepoInfoView.qml  RepoView.qml  TopBar.qml  githubcontroller.cpp  githubcontroller.h  terminal.cpp  terminal.h  terminal.h~RF85df7c.TMP
Nexus/Modules/ProjectManager/Common/: NexusButton.qml  NexusRectangle.qml  NexusTerminal.qml  NexusTerminalWrapper.qml  NexusText.qml
Nexus/Modules/ProjectManager/Popups/: CommandContextMenu.qml  CommandDialog.qml  LoginPopup.qml
Nexus/Modules/ProjectManager/RepoInfoView/: CommandList.qml  RepoActionView.qml
Nexus/Modules/Vault/: CMakeLists.txt  Vault.qml  vault.h
